fix: extend searchbar to full width on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -88,7 +88,7 @@ main {
   outline: none;
   color: inherit;
   font: inherit;
-  width: 300px;
+  width: 100%;
   max-width: 100%;
   border-radius: var(--roundness);
   padding: calc(var(--unit) * 1.5) calc(var(--unit) * 2);
@@ -113,6 +113,12 @@ main {
 
 .wallpaper .search:focus {
   background-color: rgba(255, 255, 255, 0.25);
+}
+
+@media (min-width: 560px) {
+  .search {
+    width: 300px;
+  }
 }
 
 .app-grid {
